Makieta | Small fix for borders on mobile

--- a/Makiety/static/css/shadient_mobile.css
+++ b/Makiety/static/css/shadient_mobile.css
@@ -226,11 +226,9 @@ flex: 1 1 61%;
   width: calc(100% - 20px);
 }
 
-.ProductCell > section {
-  border-left: 0 !important;
+.comparisonTable > div:not(:last-child) {
+  border: 0;
 }
-
-
 
 
 
